aligned footer to always be fixed to the bottom of page

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 img {
@@ -49,6 +51,7 @@ a {
 .content {
   display: flex;
   flex-flow: column nowrap;
+  flex: 1 0 auto;
   align-items: center;
   justify-content: center;
   padding-top: 10%;
